# King

./: .env.example  .gitignore  DEVELOPMENT_CHECKLIST.md  PROJECT_STRUCTURE.md  README.md  implementation_plan.md  pyproject.toml  repro_typer.py  requirements.txt
altimate_king_results/scanme.nmap.org_20260316_132228/: README.md
altimate_king_results/scanme.nmap.org_20260316_132659/: README.md
altimate_king_results/scanme.nmap.org_20260316_133126/: README.md
altimate_king_results/scanme.nmap.org_20260316_133336/: README.md
app/: main.py
app/api/: router.py
app/core/: ai_triage.py  auth_scan_engine.py  crawler.py  data_search.py  input_layer.py  js_engine.py  network_engine.py  osint_engine.py  payload_manager.py  recon_engine.py  reporter.py  risk_engine.py  screenshot_engine.py  secret_engine.py  secret_validator.py  surface_mapper.py  verbose.py
app/db/: session.py
app/models/: models.py
app/workers/: celery_app.py  tasks.py
cli/: main.py  wordlists.py
example_results_dir/: summary_report.md
example_results_dir/subdomains/: passive.txt
king_results/: README.md
king_results/02_assets/: admin_paths.txt
king_results/06_reports/: dashboard.html  executive_summary.md  summary_report.md
king_results/testphp.vulnweb.com_20260315_230832/: README.md
king_results/testphp.vulnweb.com_20260316_105016/: README.md
king_results/testphp.vulnweb.com_20260316_111220/: README.md
tests/: test_core_modules.py
wordlists/: directory_wordlist.txt  subdomain_wordlist.txt
wordlists/payloads/: bypass_headers.txt  extensions.txt  lfi_payloads.txt  (+3 more)
(+41 files in other folders)
