[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "the-altimate-king"
version = "0.1.0"
description = "The Altimate King — Elite Bug Bounty Recon Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9.0",
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "sqlalchemy>=2.0.27",
    "sqlmodel>=0.0.14",
    "celery>=5.3.6",
    "redis>=5.0.1",
    "httpx>=0.26.0",
    "rich>=13.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
king = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "cli*"]
